--- a/index.html
+++ b/index.html
@@ -70,14 +70,13 @@
       
       <div class="bg-gray-50 p-5 rounded-3xl shadow-sm border-t-4 border-indigo-500">
         <div class="relative w-full h-44 mb-4 overflow-hidden rounded-2xl bg-gray-900">
-          <video class="w-full h-full object-cover" controls muted>
-            <source src="assets/video/video html.mp4" type="video/mp4">
-          </video>
+          <img src="assets/images/affiche.jpeg" alt="images/jpeg">
+          
         </div>
         <h4 class="font-bold text-indigo-700 text-lg">2024 - 2025</h4>
         <p class="text-sm font-semibold text-gray-800">Dév Web & Modélisation</p>
-        <p class="text-sm text-gray-600 mt-2">HTML, CSS, Langage C, MERISE, PHP.</p>
-        <p class="text-xs italic text-indigo-400 mt-2">Petit aperçu de mon premier site HTML ci-dessus.</p>
+        <p class="text-sm text-gray-600 mt-2">HTML, CSS, Langage C, MERISE, PHP,photoshop.</p>
+        <p class="text-xs italic text-indigo-400 mt-2">Durant mon stage jai fais un un affiche pour restauration.</p>
       </div>
 
       <div class="bg-gray-50 p-5 rounded-3xl shadow-sm border-t-4 border-purple-500">
@@ -267,10 +266,27 @@
         </p>
         <p class="mt-4 text-xs font-bold text-indigo-600 uppercase">
             <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg" class="w-4 h-4 invert" alt="">
-          Voir le projet sur GitHub 
+          Voir le code sur GitHub 
         </p>
       </div>
     </a>
+<div class="project-item dev bg-white rounded-2xl overflow-hidden shadow-sm hover:shadow-2xl transition-all duration-300 border border-gray-100 group">
+  <div class="relative h-52 bg-gradient-to-tr from-green-500 to-lime-400 flex items-center justify-center">
+    <img src="assets/images/2.jpeg" class="w-16 h-16 invert opacity-80 group-hover:scale-110 transition-transform duration-500" alt="CamisonCloting Logo">
+  </div>
+  <div class="p-6">
+    <h3 class="text-xl font-bold text-indigo-700">CamisonCloting</h3>
+    <p class="text-gray-600 text-sm mt-3 leading-relaxed">Site e-commerce pour une marque de vêtements avec interface moderne et responsive.</p>
+    <div class="mt-6 flex flex-col gap-3">
+      </a>
+      <a href="https://github.com/maimounaba990-hadja/camisoncloting" target="_blank" class="flex items-center justify-center gap-2 bg-gray-900 text-white py-2 rounded-lg text-sm font-medium hover:bg-gray-800 transition">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg" class="w-4 h-4 invert" alt="">
+        Voir sur le site GitHub
+      </a>
+    </div>
+  </div>
+</div>
+
   </div>
 </section>
 
