Amélioration des paragraphes du portfolio

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         }
     </style>
 </head>
-<body class="bg-[url('assets/images/fond.png')] bg-cover bg-center text-slate-900 dark:bg-slate-900 dark:text-white transition-colors duration-500 '>
+<body class="bg-[url('assets/images/fond.png')] bg-cover bg-center text-slate-900 dark:bg-slate-900 dark:text-white transition-colors duration-500">
 
 
 <nav class="sticky top-0 z-50 bg-white/80 dark:bg-slate-100 backdrop-blur-md border-b border-slate-200 dark:border-slate-300">
@@ -62,16 +62,14 @@
     <h1 class="text-5xl md:text-6xl font-extrabold mb-4">
         Futur Ingénieur en <span id="dynamic-text" class="text-blue-600">Génie Informatique</span>
     </h1>
+<p class="text-lg text-amber-100 dark:text-slate-300 max-w-2xl mx-auto mb-10 fade-in">
+    Passionnée par l'algorithmique et le développement logiciel, je poursuis actuellement une formation en Génie Informatique où je développe des compétences solides en programmation, conception d’applications et résolution de problèmes complexes.
+    Je transforme des concepts théoriques en solutions numériques concrètes, en mettant l'accent sur la performance, la sécurité et l'expérience utilisateur.
+    Curieuse et rigoureuse, j'aime apprendre de nouvelles technologies et relever des défis techniques qui me permettent d’évoluer continuellement dans le domaine du développement informatique.
+</p>
 
-    <p class="text-lg text-amber-100 dark:text-slate-300 max-w-2xl mx-auto mb-10 fade-in">
-        Passionnée par l'algorithmique et le développement logiciel. Je transforme des concepts théoriques en solutions numériques concrètes, tout en créant des interfaces modernes et intuitives.
-    </p>
 
     <div class="flex justify-center gap-4 fade-in">
-        <a href="assets/cv.pdf" download 
-           class="bg-blue-600 text-white px-6 py-3 rounded-xl hover:bg-blue-700 transform hover:-translate-y-1 transition duration-300">
-            Télécharger CV
-        </a>
         <a href="https://github.com/maimounaba990-hadja " target="_blank" 
            class="bg-slate-900 text-white px-6 py-3 rounded-xl hover:bg-slate-800 transform hover:-translate-y-1 transition duration-300">
             Voir mon GitHub
@@ -91,7 +89,11 @@
             </span>
             <h3 class="text-xl text-blue-200  font-bold">2ème année de Génie Informatique</h3>
             <p class="text-sm font-semibold text-blue-600 mb-2">2025 - 2026</p>
-            <p class="text-amber-100 dark:text-slate-300">Approfondissement en développement logiciel, réseaux et systèmes d'information.</p>
+<p class="text-amber-100 dark:text-slate-300">
+    Approfondissement en développement logiciel, réseaux et systèmes d'information. 
+    Cette année me permet de consolider mes bases en algorithmique avancée, structures de données, conception d'applications et administration des réseaux. 
+    Je développe également des projets pratiques qui renforcent ma capacité à travailler de manière autonome et structurée.
+</p>
         </div>
 
         <div class="mb-10 ml-6">
@@ -100,7 +102,10 @@
             </span>
             <h3 class="text-xl text-blue-200 font-bold">1ère année de Génie Informatique</h3>
             <p class="text-sm font-semibold text-blue-600 mb-2">2023 - 2024</p>
-            <p class="text-amber-100 dark:text-slate-300">Acquisition des bases de la programmation (Langage C), algorithmique et architecture des ordinateurs.</p>
+<p class="text-amber-100 dark:text-slate-300">
+    Acquisition des bases de la programmation en langage C, algorithmique et architecture des ordinateurs.
+    Cette première année m'a permis de comprendre le fonctionnement interne des systèmes informatiques et de développer une logique rigoureuse dans la résolution de problèmes.
+</p>
         </div>
 
         <div class="ml-6">
@@ -109,7 +114,10 @@
             </span>
             <h3 class="text-xl text-blue-200 font-bold">Baccalauréat Scientifique</h3>
             <p class="text-sm font-semibold text-blue-600 mb-2">2023</p>
-            <p class="text-slate-200 dark:text-slate-300">Série S2 .</p>
+<p class="text-slate-200 dark:text-slate-300">
+    Obtention du Baccalauréat Scientifique Série S2, avec une forte orientation en mathématiques et sciences physiques.
+    Cette formation scientifique a renforcé mon esprit analytique et ma capacité à aborder des problématiques complexes avec méthode.
+</p>
         </div>
     </div>
 </section>
@@ -129,8 +137,11 @@
             <div class="p-6">
                 <h3 class="text-xl font-bold mb-2">Calculatrice JavaScript</h3>
                 <p class="text-sm text-slate-600 dark:text-slate-300 mb-4">
-                    Application interactive développée en JavaScript. Renforce mes compétences en DOM et logique conditionnelle.
-                </p>
+    Application interactive développée en JavaScript permettant d'effectuer des opérations arithmétiques de base.
+    Ce projet m'a permis de renforcer mes compétences , gestion des événements et logique conditionnelle.
+    J'ai également travaillé sur l'optimisation de l'interface pour offrir une expérience utilisateur simple, fluide et intuitive.
+</p>
+
                 <img src="assets/images/creationcalcularice.png" alt="">
                 <a href="https://github.com/maimounaba990-hadja/Ma-calculatrice/" target="_blank" class="text-blue-600 font-semibold hover:underline">Voir le code →</a>
             
@@ -144,8 +155,10 @@
             </div>
             <div class="p-6">
                 <h3 class="text-xl font-bold mb-2">Système Électoral (C)</h3>
-                <p class="text-sm text-slate-600 dark:text-slate-300 mb-4">
-                    Application console en C pour gérer un processus électoral complet avec vote sécurisé.
+                    <p class="text-sm text-slate-600 dark:text-slate-300 mb-4">
+    Application console développée en langage C pour gérer un processus électoral complet : enregistrement des candidats, gestion des électeurs, système de vote et affichage des résultats.
+    Ce projet m'a permis de renforcer ma maîtrise des structures conditionnelles, de la gestion des fichiers et de l'organisation logique d'un programme structuré.
+    L'accent a été mis sur la sécurité du vote et la fiabilité du traitement des données.
                     <img src="assets/images/systemelection.jpg" alt="">
                 </p>
                 <a href="https://github.com/maimounaba990-hadja/mon-projet-C" target="_blank" class="text-blue-600 font-semibold hover:underline">Voir le code →</a>
@@ -159,8 +172,11 @@
             <div class="p-6">
                 <h3 class="text-xl font-bold mb-2">CamisonClothing</h3>
                 <p class="text-sm text-slate-600 dark:text-slate-300 mb-4">
-                    Site e-commerce responsive pour une marque de vêtements. Travail sur Tailwind et design moderne.
-                </p>
+    Site e-commerce responsive développé pour une marque de vêtements.
+    Ce projet m'a permis de travailler sur le design moderne avec Tailwind CSS, l'optimisation de l'interface utilisateur et l'adaptation mobile.
+    L'objectif était de créer une plateforme visuellement attractive, fluide et adaptée aux standards actuels du web.
+</p>
+
                 <a href="https://maimounaba990-hadja.github.io/Camisooncloting/" target="_blank" class="text-blue-600 font-semibold hover:underline">Voir le site →</a>
             </div>
         </div>
@@ -172,9 +188,11 @@
     <div class="p-6">
         <h3 class="text-xl font-bold mb-2">Java - Projet Banque</h3>
         <p class="text-sm text-slate-600 dark:text-slate-300 mb-4">
-            Application Java pour gérer un système bancaire : inscription des clients, gestion des comptes et prêts. 
-            Le projet m'a permis de renforcer mes compétences en Java, logique conditionnelle, et structures de données.
-        </p>
+    Application Java permettant de gérer un système bancaire incluant l'inscription des clients, la gestion des comptes, les transactions et les prêts.
+    Ce projet m'a permis de renforcer mes compétences en programmation orientée objet, organisation du code et gestion des structures de données.
+    J'ai particulièrement travaillé sur la logique métier et la structuration claire des classes.
+</p>
+
         
         <a href="https://github.com/maimounaba990-hadja/ProjetBank" 
            target="_blank" 
@@ -195,8 +213,11 @@
         <h3 class="text-xl font-bold text-indigo-700">Site Vitrine Wix (en cours)</h3>
    <video class="w-full rounded-lg shadow-sm" controls>
     <source src="assets/video/video wix.mp4" type="video/mp4">
-          Pendant les vacances, j'avais commencee a cree une interface responsive sur Wix.
-        </p>
+         <p class="text-sm text-slate-600 dark:text-slate-300 mb-4">
+    Projet de site vitrine réalisé sur Wix durant les vacances.
+    L'objectif était de concevoir une interface responsive et moderne adaptée à différents supports (mobile, tablette, ordinateur).
+    Ce travail m'a permis d'améliorer mes compétences en design web, organisation visuelle et expérience utilisateur.
+</p>
     </video>
         <a href="https://mon-projet-wix.wixsite.com/monsite" target="_blank"
            class="inline-block mt-4 px-4 py-2 bg-indigo-600 text-white rounded-lg hover:bg-indigo-700 transition">
@@ -238,8 +259,11 @@
         <div>
             <h3 class="text-2xl font-bold mb-4 text-blue-600">Travaillons ensemble !</h3>
             <p class="text-slate-600 dark:text-slate-300 mb-8">
-                Je suis actuellement à la recherche d'un stage ou de projets en freelance. N'hésitez pas à m'envoyer un message !
-            </p>
+    Je suis actuellement à la recherche d'un stage académique, d'opportunités professionnelles ou de projets freelance dans le domaine du développement informatique.
+    Sérieuse, motivée et déterminée à évoluer, je suis ouverte à toute collaboration me permettant de mettre en pratique mes compétences techniques et d'apprendre davantage.
+    N'hésitez pas à me contacter pour discuter d'un projet ou d'une opportunité.
+</p>
+
 
             <div class="space-y-4">
                 <div class="flex items-center gap-4 group">
