Ajout de toutes les vidéos et mise à jour du HTML

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     <div class="p-6">
         <h3 class="text-xl font-bold text-indigo-700">Site Vitrine Wix (en cours)</h3>
    <video class="w-full rounded-lg shadow-sm" controls>
-    <source src="assets/video/videowix.mp4" type="video/mp4">
+    <source src="assets/video/video_wix.mp4" type="video/mp4">
          <p class="text-sm text-slate-600 dark:text-slate-300 mb-4">
     Projet de site vitrine réalisé sur Wix durant les vacances.
     L'objectif était de concevoir une interface responsive et moderne adaptée à différents supports (mobile, tablette, ordinateur).
