Mise à jour page Mes Réalisations avec HTML et vidéos

--- a/realisations.html
+++ b/realisations.html
@@ -52,7 +52,7 @@
 
     <div class="group bg-white dark:bg-slate-800 rounded-2xl overflow-hidden shadow-md hover:shadow-xl transition-all border border-slate-100 dark:border-slate-700 card-zoom">
         <video controls class="w-full h-64 object-cover transition">
-            <source src="assets/video/cablage.mp4" type="video/mp4">
+            <source src="assets/video/cablage-switch.mp4" type="video/mp4">
         </video>
         <div class="p-5">
             <span class="text-xs font-bold uppercase text-green-600">Infrastructure Réseau</span>
@@ -65,7 +65,7 @@
 
     <div class="group bg-white dark:bg-slate-800 rounded-2xl overflow-hidden shadow-md hover:shadow-xl transition-all border border-slate-100 dark:border-slate-700 card-zoom">
         <video controls class="w-full h-64 object-cover transition">
-            <source src="assets/video/vidio switch.mp4" type="video/mp4">
+            <source src="assets/video/video_switch.mp4" type="video/mp4">
         </video>
         <div class="p-5">
             <span class="text-xs font-bold uppercase text-green-600">Administration Système</span>
@@ -78,7 +78,7 @@
 
     <div class="group bg-white dark:bg-slate-800 rounded-2xl overflow-hidden shadow-md hover:shadow-xl transition-all border border-slate-100 dark:border-slate-700 card-zoom">
         <video controls class="w-full h-64 object-cover transition">
-            <source src="assets/video/video html.mp4" type="video/mp4">
+            <source src="assets/video/video_html.mp4" type="video/mp4">
         </video>
         <div class="p-5">
             <span class="text-xs font-bold uppercase text-orange-600">Développement Web</span>
