Modification de footer

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 </section>
 
 <footer class="py-8 text-center text-sm text-slate-500">
-    &copy; 2026 Maimouna BA - Tous droits réservés.
+    &copy; 2026 Maimouna BA .
 </footer>
 
 <script>
